--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,57 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="Club Nebraska Menu">
+    <style>
+        .nav-item {
+            font-size: 64px;
+            font-weight: bold;
+            margin: 40px;
+            padding: 30px;
+            color: white;
+            display: block;
+            text-decoration: none;
+            transition: 0.3s;
+            font-family: 'Brush Script MT', cursive;
+            text-align: center;
+            position: relative;
+        }
+        .nav-item::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 120%;
+            height: 100%;
+            background: rgba(57, 109, 14, 0.8);
+            clip-path: polygon(5% 0%, 95% 0%, 100% 50%, 95% 100%, 5% 100%, 0% 50%);
+            z-index: -1;
+        }
+        .nav-item:hover::before {
+            background: rgba(21, 102, 71, 0.8);
+        }
+        .menu {
+            width: 100%;
+            max-width: 1200px;
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    </style>
+
+    <div class="menu">
+        <a href="/breakfast" class="nav-item">Breakfast</a>
+        <a href="/meals" class="nav-item">Meals</a>
+        <a href="/drinks" class="nav-item">Drinks</a>
+        <a href="/desserts" class="nav-item">Desserts</a>
+        <a href="/specials" class="nav-item">Specials</a>
+    </div>
 </Layout>
+
+
+
+
+
